<resources>
    <string name="app_name" translatable="false">Electro</string>

    <!-- Titles -->
    <string name="title_chargers">Chargers</string>
    <string name="title_services">Services</string>
    <string name="title_cars">Cars</string>
    <string name="title_charger">Charger</string>
    <string name="title_car">Car</string>
    <string name="title_complaint">Complaint</string>
    <string name="title_you">You</string>
    <string name="title_add_car">Add Car</string>
    <string name="title_login">Login</string>
    <string name="title_registration">Registration</string>

    <!-- Messages -->
    <string name="message_registration">User successfully created</string>
    <string name="message_add_car">Car successfully added</string>
    <string name="message_complaint">Complaint successfully created</string>
    <string name="message_delete_car">Car successfully deleted</string>

    <!-- Languages -->
    <string name="language_english_name">English</string>
    <string name="language_ukrainian_name">Ukrainian</string>

    <!-- Forms -->
    <string name="form_email">Email</string>
    <string name="form_password">Password</string>
    <string name="form_firstName">First name</string>
    <string name="form_lastName">Last name</string>
    <string name="form_add_car">VIN code</string>
    <string name="form_complaint">Complaint</string>

    <!-- User Profile -->
    <string name="user_welcome">Welcome,</string>
    <string name="user_created">Created:</string>
    <string name="user_email">Email:</string>

    <!-- Buttons -->
    <string name="btn_login">Login</string>
    <string name="btn_registration">Registration</string>
    <string name="btn_add_car">Add</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_delete">Delete</string>

    <!-- Links -->
    <string name="link_login">Login</string>
    <string name="link_registration">Registration</string>

    <!-- List of chargers -->
    <string name="charger_adapter_id_placeholder">%1$s</string>
    <string name="charger_adapter_code_placeholder">%1$s</string>
    <string name="charger_adapter_country_placeholder">%1$s</string>
    <string name="charger_adapter_city_placeholder">%1$s</string>
    <string name="charger_adapter_street_placeholder">%1$s</string>

    <!-- List of stations -->
    <string name="service_adapter_id_placeholder">%1$s</string>
    <string name="service_adapter_name_placeholder">%1$s</string>
    <string name="service_adapter_country_placeholder">%1$s</string>
    <string name="service_adapter_city_placeholder">%1$s</string>
    <string name="service_adapter_street_placeholder">%1$s</string>

    <!-- List of cars -->
    <string name="car_adapter_id_placeholder">%1$s</string>
    <string name="car_adapter_vin_code_placeholder">%1$s</string>
    <string name="car_adapter_name_placeholder">%1$s</string>
    <string name="car_adapter_model_placeholder">%1$s</string>

    <!-- Maintenance -->
    <string name="maintenance_country_placeholder">Country:</string>
    <string name="maintenance_city_placeholder">City:</string>
    <string name="maintenance_street_placeholder">Street:</string>
    <string name="maintenance_zip_code_placeholder">Zip code:</string>
    <string name="maintenance_company_placeholder">Company:</string>
    <string name="maintenance_time_from_placeholder">Time from:</string>
    <string name="maintenance_time_to_placeholder">Time to:</string>
    <string name="maintenance_per_hour_placeholder">/hour</string>
    <string name="maintenance_price_average_placeholder">Price (average):</string>
    <string name="maintenance_price_placeholder">Price:</string>
    <string name="maintenance_type_connector_placeholder">Type connector:</string>
    <string name="maintenance_is_fast_placeholder">Power:</string>
    <string name="maintenance_is_pay_placeholder">Pay:</string>
    <string name="maintenance_car_name_placeholder">Car name:</string>
    <string name="maintenance_car_model_placeholder">Car model:</string>
    <string name="maintenance_all_places_placeholder">All places:</string>
    <string name="maintenance_free_places_placeholder">Free places:</string>
    <string name="maintenance_power_low_placeholder">Low</string>
    <string name="maintenance_power_fast_placeholder">Fast</string>
    <string name="maintenance_yes_placeholder">Yes</string>
    <string name="maintenance_no_placeholder">No</string>

    <!-- Car -->
    <string name="car_vin_code_placeholder">VIN code:</string>
    <string name="car_mileage_placeholder">Mileage:</string>
    <string name="car_type_connector_placeholder">Type connector:</string>
    <string name="car_percentage_of_charge_placeholder">Battery:</string>

</resources>