<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_battery_charging_full_24"
        android:title="@string/title_chargers" />

    <item
        android:id="@+id/navigation_services"
        android:icon="@drawable/ic_baseline_home_repair_service_24"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_add_car"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="@string/title_add_car" />
    <item
        android:id="@+id/navigation_cars"
        android:icon="@drawable/ic_baseline_electric_car_24"
        android:title="@string/title_cars" />

    <item
        android:id="@+id/navigation_you"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_you" />

</menu>